cargo-features = ["workspace-inheritance"]

[package]
default-run = "save"
description = "Would you like to SAVE the change?"
edition.workspace = true
license.workspace = true
name = "save"
repository.workspace = true
version.workspace = true

[dependencies]
clap = { features = ["derive", "env", "cargo", "unicode", "wrap_help"], workspace = true }
color-eyre.workspace = true
digest.workspace = true
eyre.workspace = true
git2.workspace = true
hex.workspace = true
home.workspace = true
itertools.workspace = true
lazy_static.workspace = true
petgraph.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rayon.workspace = true
sha-1.workspace = true
sha2.workspace = true
tempfile.workspace = true
termcolor.workspace = true
thiserror.workspace = true
thousands.workspace = true
tracing = { features = ["log"], workspace = true }
tracing-error = { features = ["traced-error"], workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
typenum.workspace = true
once_cell.workspcae = true

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[dev-dependencies]
criterion = { features = ["html_reports"], workspace = true }
crossterm.workspace = true
iai.workspace = true

[features]

[package.metadata.release]
allow-branch = ["trunk"]
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["scripts/pre-release"]
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
